--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 attrs==21.2.0
+autopep8==1.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 Flask==2.0.2
+Flask-WTF==1.0.0
 idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
@@ -20,3 +22,4 @@ requests==2.26.0
 toml==0.10.2
 urllib3==1.26.7
 Werkzeug==2.0.2
+WTForms==3.0.0
